--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,7 +124,7 @@ jobs:
         .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-multipart -Version $env:PACKAGE_VERSION
         .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-bundle -Version $env:PACKAGE_VERSION
 
-  release-abstractions-maven-central:
+  release-maven-central:
     if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     environment: maven_central
@@ -132,6 +132,18 @@ jobs:
     defaults:
       run:
         working-directory: ./
+    strategy:
+      matrix:
+        component-path: [
+          abstractions,
+          authentication/azure,
+          http/okHttp,
+          serialization/form,
+          serialization/json,
+          serialization/text,
+          serialization/multipart,
+          bundle
+        ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup JDK
@@ -154,255 +166,12 @@ jobs:
         OUTPUT_PATH: 'secring.gpg'
     - name: Copy secring
       run: |
-        Copy-Item secring.gpg components/abstractions/ -Verbose
+        Copy-Item secring.gpg components/${{ matrix.component-path }}/ -Verbose
       shell: pwsh
     - name: Publish Release abstractions
-      run: ./gradlew --no-daemon :components:abstractions:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-
-  release-authentication-maven-central:
-    if: contains(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    environment: maven_central
-    needs: validate-package-contents
-    defaults:
-      run:
-        working-directory: ./
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup JDK
-      uses: actions/setup-java@v4
-      with:
-        java-version: ${{ env.JAVA_VERSION }}
-        distribution: ${{ env.JAVA_DIST}}
-        cache: gradle
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
-        OUTPUT_PATH: 'local.properties'
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
-        OUTPUT_PATH: 'secring.gpg'
-    - name: Copy secring
       run: |
-        Copy-Item secring.gpg components/authentication/azure/ -Verbose
-      shell: pwsh
-    - name: Publish Release authentication azure
-      run: ./gradlew --no-daemon :components:authentication:azure:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-
-  release-http-maven-central:
-    if: contains(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    environment: maven_central
-    needs: validate-package-contents
-    defaults:
-      run:
-        working-directory: ./
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup JDK
-      uses: actions/setup-java@v4
-      with:
-        java-version: ${{ env.JAVA_VERSION }}
-        distribution: ${{ env.JAVA_DIST}}
-        cache: gradle
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
-        OUTPUT_PATH: 'local.properties'
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
-        OUTPUT_PATH: 'secring.gpg'
-    - name: Copy secring
-      run: |
-        Copy-Item secring.gpg components/http/okHttp/ -Verbose
-      shell: pwsh
-    - name: Publish Release okHttp
-      run: ./gradlew --no-daemon :components:http:okHttp:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-
-  release-serialization-form-maven-central:
-    if: contains(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    environment: maven_central
-    needs: validate-package-contents
-    defaults:
-      run:
-        working-directory: ./
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup JDK
-      uses: actions/setup-java@v4
-      with:
-        java-version: ${{ env.JAVA_VERSION }}
-        distribution: ${{ env.JAVA_DIST}}
-        cache: gradle
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
-        OUTPUT_PATH: 'local.properties'
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
-        OUTPUT_PATH: 'secring.gpg'
-    - name: Copy secring
-      run: |
-        Copy-Item secring.gpg components/serialization/form/ -Verbose
-      shell: pwsh
-    - name: Publish Release serialization form
-      run: ./gradlew --no-daemon :components:serialization:form:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-
-  release-serialization-json-maven-central:
-    if: contains(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    environment: maven_central
-    needs: validate-package-contents
-    defaults:
-      run:
-        working-directory: ./
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup JDK
-      uses: actions/setup-java@v4
-      with:
-        java-version: ${{ env.JAVA_VERSION }}
-        distribution: ${{ env.JAVA_DIST}}
-        cache: gradle
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
-        OUTPUT_PATH: 'local.properties'
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
-        OUTPUT_PATH: 'secring.gpg'
-    - name: Copy secring
-      run: |
-        Copy-Item secring.gpg components/serialization/json/ -Verbose
-      shell: pwsh
-    - name: Publish Release serialization json
-      run: ./gradlew --no-daemon :components:serialization:json:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-
-  release-serialization-text-maven-central:
-    if: contains(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    environment: maven_central
-    needs: validate-package-contents
-    defaults:
-      run:
-        working-directory: ./
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup JDK
-      uses: actions/setup-java@v4
-      with:
-        java-version: ${{ env.JAVA_VERSION }}
-        distribution: ${{ env.JAVA_DIST}}
-        cache: gradle
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
-        OUTPUT_PATH: 'local.properties'
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
-        OUTPUT_PATH: 'secring.gpg'
-    - name: Copy secring
-      run: |
-        Copy-Item secring.gpg components/serialization/text/ -Verbose
-      shell: pwsh
-    - name: Publish Release serialization text
-      run: ./gradlew --no-daemon :components:serialization:text:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-
-  release-serialization-multipart-maven-central:
-    if: contains(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    environment: maven_central
-    needs: validate-package-contents
-    defaults:
-      run:
-        working-directory: ./
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup JDK
-      uses: actions/setup-java@v4
-      with:
-        java-version: ${{ env.JAVA_VERSION }}
-        distribution: ${{ env.JAVA_DIST}}
-        cache: gradle
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
-        OUTPUT_PATH: 'local.properties'
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
-        OUTPUT_PATH: 'secring.gpg'
-    - name: Copy secring
-      run: |
-        Copy-Item secring.gpg components/serialization/multipart/ -Verbose
-      shell: pwsh
-    - name: Publish Release serialization multipart
-      run: ./gradlew --no-daemon :components:serialization:multipart:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-
-  release-bundle-maven-central:
-    if: contains(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    environment: maven_central
-    needs: validate-package-contents
-    defaults:
-      run:
-        working-directory: ./
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup JDK
-      uses: actions/setup-java@v4
-      with:
-        java-version: ${{ env.JAVA_VERSION }}
-        distribution: ${{ env.JAVA_DIST}}
-        cache: gradle
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
-        OUTPUT_PATH: 'local.properties'
-    - name: Download file
-      run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
-      shell: pwsh
-      env:
-        ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
-        OUTPUT_PATH: 'secring.gpg'
-    - name: Copy secring
-      run: |
-        Copy-Item secring.gpg components/bundle/ -Verbose
-      shell: pwsh
-    - name: Publish Release bundle
-      run: ./gradlew --no-daemon :components:bundle:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
+        componentTaskPath=$(echo ${{ matrix.component-path }} | tr / :)
+        ./gradlew --no-daemon :components:$componentTaskPath:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
 
   release-to-github:
     if: contains(github.ref, 'refs/tags/v')
