--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -199,4 +199,6 @@ jobs:
         CHANGELOG_FILE: "CHANGELOG.md"
         ALLOW_EMPTY_CHANGELOG: "true"
       with:
-        args: components/**/build/libs/*.jar
+        args: |
+          components/**/build/libs/*.jar
+          components/**/**/build/libs/*.jar
