Publish packages to maven central sequentially

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -137,6 +137,7 @@ jobs:
       run:
         working-directory: ./
     strategy:
+      max-parallel: 1
       matrix:
         component-path: [
           abstractions,
