Add android lint disable option

--- a/components/abstractions/android/build.gradle
+++ b/components/abstractions/android/build.gradle
@@ -57,6 +57,7 @@ android {
         disable "GradleDependency"
         disable "NewerVersionAvailable"
         disable "DuplicatePlatformClasses"      // xpp3 added by azure-identity
+        disable "LambdaLast"                    // Wrongly enforced in KiotaJsonSerialization helpers
     }
     sourceSets {
         main {
