--- a/components/bundle/build.gradle
+++ b/components/bundle/build.gradle
@@ -92,9 +92,9 @@ publishing {
     publications {
         maven(MavenPublication) {
             customizePom(pom)
-            groupId project.property('mavenGroupId')
-            artifactId project.property('mavenArtifactId')
-            version "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}${mavenCentralSnapshotArtifactSuffix}"
+            groupId = project.property('mavenGroupId')
+            artifactId = project.property('mavenArtifactId')
+            version = "${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}${mavenCentralSnapshotArtifactSuffix}"
             from components.java
             pom.withXml {
                 def pomFile = file("${project.buildDir}/generated-pom.xml")
