--- a/components/bundle/gradle/dependencies.gradle
+++ b/components/bundle/gradle/dependencies.gradle
@@ -1,10 +1,8 @@
 dependencies {
     // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.12.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.12.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.0'
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
-    // Use JUnit Jupiter Engine for testing.
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'org.mockito:mockito-core:5.15.2'
 
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
