--- a/components/serialization/multipart/gradle/dependencies.gradle
+++ b/components/serialization/multipart/gradle/dependencies.gradle
@@ -1,10 +1,8 @@
 dependencies {
     // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.12.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.0'
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     testImplementation 'org.mockito:mockito-core:5.15.2'
-
-    // Use JUnit Jupiter Engine for testing.
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
