--- a/components/authentication/azure/gradle/dependencies.gradle
+++ b/components/authentication/azure/gradle/dependencies.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'io.opentelemetry:opentelemetry-api:1.47.0'
     implementation 'io.opentelemetry:opentelemetry-context:1.47.0'
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+    api 'javax.xml.stream:stax-api:1.0-2'
     api 'com.azure:azure-core:1.55.2'
 
     api project(':components:abstractions')
