--- a/components/http/okHttp/gradle/dependencies.gradle
+++ b/components/http/okHttp/gradle/dependencies.gradle
@@ -5,6 +5,7 @@ dependencies {
 
     testImplementation 'org.mockito:mockito-core:5.18.0'
     testImplementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
 
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
