--- a/components/authentication/azure/android/build.gradle
+++ b/components/authentication/azure/android/build.gradle
@@ -46,6 +46,7 @@ android {
     }
 
     lintOptions {
+        baseline file("lint-baseline.xml")
         textOutput "stdout"
         checkAllWarnings true
         warningsAsErrors true
