--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -83,13 +83,13 @@ extends:
                   $major = $contents | Select-String -Pattern 'mavenMajorVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
                   $minor = $contents | Select-String -Pattern 'mavenMinorVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
                   $patch = $contents | Select-String -Pattern 'mavenPatchVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
-                  $version = "$major.$minor.$patch$Env:SNAPSHOT_SUFFIX"
+                  $snapshot_suffix = if ($Env:BRANCH_NAME.StartsWith('refs/tags/v')) { '-SNAPSHOT' } else { '' }
+                  $version = "$major.$minor.$patch$snapshot_suffix"
                   echo "Current version is $version"
                   echo "##vso[task.setvariable variable=PACKAGE_VERSION;isOutput=true]$version"
                 displayName: Get current SNAPSHOT version
                 env:
-                ${{ if contains(variables['build.sourceBranch'], 'refs/tags/v') }}:
-                  SNAPSHOT_SUFFIX: '-SNAPSHOT'
+                  BRANCH_NAME: $(Build.SourceBranchName)
 
               - pwsh: |
                   .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-abstractions -Version $env:PACKAGE_VERSION
