--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -72,11 +72,11 @@ extends:
 
               - script: ./gradlew --no-daemon publishToMavenLocal
                 displayName: Publish to local Maven
-                if: not(contains(variables['build.sourceBranch'], 'refs/tags/v'))
+                condition: not(contains(variables['build.sourceBranch'], 'refs/tags/v'))
 
               - script: ./gradlew --no-daemon publishToMavenLocal -PmavenCentralSnapshotArtifactSuffix=""
                 displayName: Publish to local Maven
-                if: contains(variables['build.sourceBranch'], 'refs/tags/v')
+                condition: contains(variables['build.sourceBranch'], 'refs/tags/v')
 
               - pwsh: |
                   $contents = Get-Content gradle.properties -Raw
