--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -89,38 +89,35 @@ extends:
                   $snapshot_suffix = if ($Env:BRANCH_NAME.StartsWith('refs/tags/v')) { '' } else { '-SNAPSHOT' }
                   $version = "$major.$minor.$patch$snapshot_suffix"
                   echo "Current version is $version"
-                  echo "##vso[task.setvariable variable=PACKAGE_VERSION;isOutput=true]$version"
+                  echo "##vso[task.setvariable variable=PACKAGE_VERSION;]$version"
                 displayName: Get current version
                 name: GetVersion
                 env:
                   BRANCH_NAME: $(Build.SourceBranchName)
 
               - pwsh: |
-                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-abstractions -Version $env:PACKAGE_VERSION
-                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-authentication-azure -Version $env:PACKAGE_VERSION
-                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-http-okHttp -Version $env:PACKAGE_VERSION
-                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-form -Version $env:PACKAGE_VERSION
-                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-json -Version $env:PACKAGE_VERSION
-                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-text -Version $env:PACKAGE_VERSION
-                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-multipart -Version $env:PACKAGE_VERSION
-                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-bundle -Version $env:PACKAGE_VERSION
+                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-abstractions -Version $(PACKAGE_VERSION)
+                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-authentication-azure -Version $(PACKAGE_VERSION)
+                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-http-okHttp -Version $(PACKAGE_VERSION)
+                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-form -Version $(PACKAGE_VERSION)
+                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-json -Version $(PACKAGE_VERSION)
+                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-text -Version $(PACKAGE_VERSION)
+                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-multipart -Version $(PACKAGE_VERSION)
+                  .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-bundle -Version $(PACKAGE_VERSION)
                 displayName: Inspect contents of local Maven cache
-                env:
-                  PACKAGE_VERSION: $[ dependencies.GetVersion.outputs['GetVersion.PACKAGE_VERSION'] ]
 
               - pwsh: |
-                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-abstractions -Version $env:PACKAGE_VERSION
-                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-authentication-azure -Version $env:PACKAGE_VERSION
-                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-http-okHttp -Version $env:PACKAGE_VERSION
-                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-form -Version $env:PACKAGE_VERSION
-                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-json -Version $env:PACKAGE_VERSION
-                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-text -Version $env:PACKAGE_VERSION
-                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-multipart -Version $env:PACKAGE_VERSION
-                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-bundle -Version $env:PACKAGE_VERSION
+                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-abstractions -Version $(PACKAGE_VERSION)
+                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-authentication-azure -Version $(PACKAGE_VERSION)
+                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-http-okHttp -Version $(PACKAGE_VERSION)
+                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-form -Version $(PACKAGE_VERSION)
+                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-json -Version $(PACKAGE_VERSION)
+                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-text -Version $(PACKAGE_VERSION)
+                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-multipart -Version $(PACKAGE_VERSION)
+                  .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-bundle -Version $(PACKAGE_VERSION)
                 displayName: Zip contents of local Maven cache
                 env:
                   OUTPUT_DIRECTORY: $(Build.ArtifactStagingDirectory)
-                  PACKAGE_VERSION: $[ dependencies.GetVersion.outputs['GetVersion.PACKAGE_VERSION'] ]
               
               - task: 1ES.PublishPipelineArtifact@1
                 displayName: "Publish Artifact: jars"
@@ -129,6 +126,7 @@ extends:
                   targetPath: "$(Build.ArtifactStagingDirectory)/*.zip"
 
       # - stage: deploy
+      #   # condition: and(or(contains(variables['build.sourceBranch'], 'refs/tags/v'), eq(variables['build.sourceBranch'], '${{ parameters.previewBranch }}')), succeeded())
       #   dependsOn: build
       #   jobs:
       #     - deployment: deploy_github
@@ -148,4 +146,22 @@ extends:
       #         runOnce:
       #           deploy:
       #             steps:
+      #               - pwsh: |
+      #                   $zips = Get-ChildItem -Path "$(Pipeline.Workspace)" -Filter "*.zip"
+      #                   foreach ($zip in $zips) {
+      #                       $targetPath = $zip.FullName.Replace(".zip", "")
+      #                       Expand-Archive -Path $zip.FullName -DestinationPath $targetPath
+      #                       Remove-Item -Path $zip.FullName -Force
+      #                   }
+      #                 displayName: Unzip artifacts
+      #               #TODO artifactVersion
+      #               - task: GitHubRelease@1
+      #                 inputs:
+      #                   gitHubConnection: "microsoftkiota"
+      #                   tagSource: userSpecifiedTag
+      #                   tag: "v$(artifactVersion)"
+      #                   title: "v$(artifactVersion)"
+      #                   assets: |
+      #                     $(Pipeline.Workspace)/**/*
+      #                   addChangeLog: false
             
